2007-05-19  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Added firefox-plugin detection for Firefox version
	2.x.

2007-03-03  Shih-yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* configure.ac,
	po/zh_TW.po,
	po/Makevars,
	po/zh_CN.po: update the address of forum.

2007-02-26  Shih-yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* src/mainframe.cpp: add a workaround to prevent zombie process after
	updating BBS list.

2007-02-21  Shih-yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* src/appconfig.cpp: fix the bug of center align.

2007-02-08  Kanru Chen  <koster@debian.org.tw>

	* configure.ac,
	src/mainframe.cpp,
	src/pcmanx_gtk2.cpp,
	src/view/telnetcon.cpp:
	Added libnotify notifier support, use --enable-libnotify to switch.

2007-01-21  Shih-yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* configure.ac,
	src/appconfig.cpp,
	src/appconfig.h,
	src/generalprefpage.cpp,
	src/mainframe.cpp,
	src/mainframe.h,
	src/view/telnetview.cpp,
	src/view/telnetview.h: disable the buggy "BBS List Update" and
	wget download by default.

2007-01-18  Jim Huang  <jserv.tw@gmail.com>

	* src/docklet/eggtrayicon.c (egg_tray_icon_class_init)
	(egg_tray_icon_manager_window_destroyed) (egg_tray_icon_realize)
	(egg_tray_icon_send_message): Sync with GNOME cvs repository.
	Updated: transparent icons, sending of messages, and fix 1 pixel.
	(egg_tray_icon_add) (transparent_expose_event)
	(make_transparent_again) (make_transparent): New helper functions.

2007-01-18  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp (CMainFrame::CMainFrame): Remove the call of
	gtk_widget_grab_focus to avoid SIGSEGV caused by gtk+-2.10.7 .
	Reported by Leo <sdl.web@gmail.com>.

2006-10-11  Jim Huang  <jserv.tw@gmail.com>

	* src/emoticondlg.cpp (CEmoticonDlg::CEmoticonDlg),
	src/editfavdlg.cpp (CEditFavDlg::CEditFavDlg),
	src/core/termview.cpp (CTermView::PasteFromClipboard),
	src/appconfig.cpp (CAppConfig::SaveFavorites): Remove redundant
	variables.
