@@ -4,7 +4,7 @@ PCMan <pcman.tw@gmail.com>
 
 Developers
 ----------
-Jim Huang <jserv@kaffe.org>
+Jim Huang <jserv.tw@gmail.com>
 Kanru Chen <koster@debian.org.tw>
 Shih-yuan Lee <fourdollars@gmail.com>
 Chia I Wu <b90201047@ntu.edu.tw>
